[project]
name = "pythonprojectzaawansowane-16-03-2026"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "mysql-connector-python>=9.6.0",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "peewee>=4.0.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]
